--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,25 +1,22 @@
-name: Build and push container to docker repo containers @ DO
-on:
-  push:
-    branches:
-      - main
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Git Checkout
-      uses: actions/checkout@v1
-
-    - name: Login to Digital Ocean Registry
-      uses: docker/login-action@v1
-      with:
-        registry: registry.digitalocean.com
-        username: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
-        password: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
-
-    - name: Build latest
-      run: docker build -t registry.digitalocean.com/containers/workshop-github-actions-test:$(echo $GITHUB_SHA | head -c7) ./app
-    
-    - name: Deploy app
-      run: docker push registry.digitalocean.com/containers/workshop-github-actions-test:$(echo $GITHUB_SHA | head -c7)
-    
+apiVersion: apps/v1
+kind: Deployment
+namespace: apps
+metadata:
+  name: svelte-app-deployment
+  labels:
+    app: svelte-app
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: svelte-app
+  template:
+    metadata:
+      labels:
+        app: svelte-app
+    spec:
+      containers:
+      - name: svelte-app
+        image: registry.digitalocean.com/containers/workshop-github-actions-test:latest
+        ports:
+        - containerPort: 5173
