--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and push container to docker repo containers @ DO
+name: Build, push container to docker repo containers & deploy app @ DO
 on:
   push:
     branches:
